@@ -117,6 +117,8 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
 
   o Minor features (other):
     - More unit tests.
+    - Warn when using a version of libevent before 1.3b to run a server on
+      OSX or BSD: these versions interact badly with userspace threads.
 
   o Removed features:
     - Removed support for the old binary "version 0" controller protocol.
